--- a/source/manifest.json
+++ b/source/manifest.json
@@ -9,10 +9,24 @@
 	"background": { 
 		"scripts" : ["background.js"]
 	},
-	
+
+	"options_page": "ui/options.html",
+
+	"icons": {
+		 "16": "images/icon16.png",
+		 "32": "images/icon32.png",
+		 "48": "images/icon48.png",
+		"128": "images/icon128.png"
+	},
+
+	"browser_action": {
+		"default_icon": {"19": "images/icon19.png" }
+	},
+
 	"permissions": [
 		"tabs",
 		"management",
+		"storage",
 		"webRequest",
 		"webRequestBlocking",
 		"webNavigation",
